slight text changes "View Games Included" now aligned correctly

--- a/src/app/subscribe/packages.less
+++ b/src/app/subscribe/packages.less
@@ -147,7 +147,15 @@
 
 .gl-package-description {
   padding: 10px;
-  height: 210px;
+  height: 120px;
+  width: 260px;
+  margin: auto;
+  font-size: 15px;
+}
+
+.gl-package-games-included {
+  padding: 10px;
+  height: 90px;
   width: 260px;
   margin: auto;
   font-size: 15px;
